# mdt-reco

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml  setup_env.sh  test.txt
.github/workflows/: ci.yml
configs/: ci_config.yaml  config.yaml
data/: track_truth_info_10k.npy
scripts/: Generator.py  RTFitter.py  T0Fit.py  decoder.py  encoder.py  eventGenerator.py  fitTDCs.py  rtFitter.py  rtFitter_run_class_version.py
src/mdt_reco/: ConfigParser.py  Event.py  Gen.py  Geometry.py  RTFitter.py  Signal.py  TDCFitter.py  TrackFitter.py  __init__.py  clear_figures.sh  fit_rt.py  rt_tester.py
tests/: ci_test_geo.pickle  test_geometry.py  test_sim.py
