[project]
name = "mdt-reco"
version = "0.1.0"
description = "General MDT Simulator and Reconstruction Package"
readme = "README.md"
authors = [
    { name = "Daniel Humphreys", email = "dahumphr@cern.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml"
]

[dependency-groups]
dev = [
    ]

[project.scripts]
mdt-reco = "mdt_reco:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
