[project]
name = "mdt-reco"
version = "0.1.0"
description = "General MDT Simulator and Reconstruction Package"
readme = "README.md"
authors = [
    { name = "Daniel Humphreys", email = "dahumphr@cern.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "numba"
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit"
    ]

[project.scripts]
mdt-reco = "mdt_reco:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
    "PTH123",  # Prefer Path.open()
    "PTH122",  # Prefer Path.suffix, Path.stem, etc.
    "PTH118",  # Prefer Path / operator over os.path.join
    "PLR0913", # Too many arguments in function (from pylint rules)
    "NPY002",  # replace legacy functions
]


